# vision_and_autonomous_surgical_movement

./: README.md  gitignore
auto_movement/: CMakeLists.txt  package.xml  setup.py
auto_movement/scripts/: test_cartesian_movement.py
featurization/: CMakeLists.txt  package.xml  setup.py
featurization/config/features/: tools.csv
featurization/launch/: camshift_sample_video.launch  feature_extraction.launch  hsv_color_filter_sample_video.launch
featurization/msg/: FeaturePoints.msg
featurization/scripts/: feature_extraction.py
featurization/src/pipelines/: __init__.py  feature_processor.py  motion_controller.py
simulation/: CMakeLists.txt  package.xml
simulation/launch/: ecm_camera_tf.launch  psm2_camera_tf.launch
simulation/scripts/: image_flipper.py
