<?xml version="1.0"?>
<package format="2">
  <name>ecm_controller</name>
  <version>0.0.0</version>
  <description>The test_ecm package</description>

  <maintainer email="divya.budihal@alumni.ubc.ca">Divya Budihal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dvrk_python</build_depend>
  <build_export_depend>dvrk_python</build_export_depend>
  <exec_depend>dvrk_python</exec_depend>

</package>
